syntax = "proto3";

package metrics;

option go_package = "metrics/proto";

message Metric{
  string id = 1;
  string type = 2;
  sint64 delta  = 3;
  double value  = 4;
}
message AddSingleRequest{
  Metric metric =1;
}
message AddSingleResponse{
}

message GetSingleRequest{
 Metric metric =1;
}
message GetSingleResponse{
  Metric metric =1;
}

message AddMetricsRequest{
  repeated Metric metrics =1;
}
message AddMetricsResponse{
}

message GetMetricsRequest{
}
message GetMetricsResponse{
  repeated Metric metrics =1;
}



service Metrics{
  rpc AddSingle(AddSingleRequest)returns(AddSingleResponse);
  rpc GetSingle(GetSingleRequest)returns(GetSingleResponse);
  rpc AddMetrics(AddMetricsRequest)returns(AddMetricsResponse);
  rpc GetMetrics(GetMetricsRequest)returns(GetMetricsResponse);
}
